fix sidebar z-index (#366)
* fix sidebar z-index

* enabling horizontal scroll for browser

--- a/src/components/DataBrowserHeaderBar/DataBrowserHeaderBar.scss
+++ b/src/components/DataBrowserHeaderBar/DataBrowserHeaderBar.scss
@@ -9,7 +9,7 @@
 
 .bar {
   position: absolute;
-  top: 0;
+  top: 51px;
   left: 0;
   height: 30px;
   background-color: #66637a;
